Shared page start

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -289,7 +289,7 @@
         }
 
 
-        // Mobile double tap function
+        // Mobile hold tap function
         var holdtapTimer = null;
 
         function tap(id, fileType, name) {
