--- a/Ethereal Cloud/Pages/Bin.cshtml
+++ b/Ethereal Cloud/Pages/Bin.cshtml
@@ -29,25 +29,18 @@
                 <div class="row" id="scrollbox-contents">
                     @foreach (var display in Model.DisplayList)
                     {
-                        <div id="uploaded-files" class="file-hover" onmouseover="showButton('fileButtonHolder-@display.Id')" onmouseout="hideButton('fileButtonHolder-@display.Id', 'file-info-@display.Id')">
+                        <div id="uploaded-files" class="file-hover" onmouseover="showButton('fileButtonHolder-@display.Id-@display.Type')" onmouseout="hideButton('fileButtonHolder-@display.Id-@display.Type')">
                             <a id="fileLink">
                                 <img id="uploaded-files-img" src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
                             </a>
                             <p>@display.Name</p>
 
                             <!-- Buttons for files/folders-->
-                            <div id="fileButtonHolder-@display.Id" class="fileButtonHolder" style="">
+                            <div id="fileButtonHolder-@display.Id-@display.Type" class="fileButtonHolder" style="">
 
-                                <button id="fileSettingsButton" aria-expanded="false" aria-controls="file-info-@display.Id" onclick="toggleFileInfo('file-info-@display.Id')">
-                                    <img id="fileSettingsImage" src="~/images/file-icons/three-dots.svg" alt="path">
-
-                                    <div id="file-info-@display.Id" class="file-info">
-                                        <div class="menu" id="@display.Id-menu">
-                                            <div class="menu-item" onclick="restoreFileFolder('@display.Id', '@display.Type')">Restore</div>
-                                        </div>
-                                    </div>
+                                <button id="fileSettingsButton" onclick="restoreFileFolder('@display.Id', '@display.Type')">
+                                    <img id="fileSettingsImage" src="~/images/file-icons/cloud-restore.svg" alt="path">
                                 </button>
-                                
                             </div>
                         </div>
                     }
@@ -138,13 +131,11 @@
             button.style.display = 'inline';
         }
 
-        function hideButton(holderId, menuId) {
+        function hideButton(holderId) {
             if (matchMedia('(hover: hover)').matches) {
                 var holder = document.getElementById(holderId);
-                var menu = document.getElementById(menuId);
-                if (menu.style.display !== "block") {
                     holder.style.display = "none";
-                }
+                
             }
         }
 
@@ -161,21 +152,6 @@
         }
 
 
-        function toggleFileInfo(id) {
-
-            var fileInfo = document.getElementById(id);
-            var expanded = fileInfo.getAttribute('aria-expanded') === 'true';
-
-            // Toggle the aria-expanded attribute
-            fileInfo.setAttribute('aria-expanded', !expanded);
-
-            // Toggle the visibility of the file info
-            if (expanded) {
-                fileInfo.style.display = 'none';
-            } else {
-                fileInfo.style.display = 'block';
-            }
-        }
 
 
         //Menu buttons
@@ -207,12 +183,6 @@
                 return;
             }
 
-
-            var menuOpen = document.querySelectorAll('.file-info');
-            menuOpen.forEach(function (menu) {
-                menu.setAttribute('aria-expanded', false);
-                menu.style.display = 'none';
-            });
 
             if (matchMedia('(hover: hover)').matches) {
                 var buttonHolder = document.querySelectorAll('.fileButtonHolder');
