Upload file explorer fix

--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -1,6 +1,7 @@
 ﻿#file-explorer {
     padding: 0px;
     justify-content: center;
+    position: relative;
 }
 
 /* This is where the scrollbox is contained */
