--- a/Ethereal Cloud/Pages/Shared.cshtml
+++ b/Ethereal Cloud/Pages/Shared.cshtml
@@ -9,17 +9,30 @@
 
 
     <style>
-        #filepath-button {
-            display: flex;
-            align-items: center;
+
+        #share-button-holder {
+            padding: 0px;
+            position: absolute;
+            right: 20px;
+            top: 10px;
         }
 
-            #filepath-button button {
-                height: 100%;
-                padding: 0px 5px 0px 5px;
-                width: 100%;
+        #share-button {
+            height: 36px;
+            border-bottom: none;
+            background: #cbbbe2;
+        }
+
+            #share-button.active {
+                background: #f2f2f2;
             }
+
+            #share-button:hover {
+                background: #cbbb11;
+            }
+    
     </style>
+
 
 }
 
@@ -29,36 +42,29 @@
 
     <!-- Files Box -->
     <div id="filebox" class="col-lg-12 col-md-12 col-sm-12 h-100">
+        
+        <!-- Shared Page Buttons -->
+        <div id="share-button-holder">
+
+            <button id="share-button" class="active">Shared With Me</button>
+
+            <button id="share-button" class="">Sharing With</button>
+
+        </div>
+
+
+        
         <!-- FilePath -->
         <div id="filepath" class="row">
 
             <!-- Sort button -->
-            <div id="filepath-button" class="col-md-6 col-sm-4 col-2">
+            <div id="filepath-button" class="col">
                 <a href="#" onclick="toggleSort()">
                     <img title="Sort" id="toggleImage" class="row" src="@SetSort()" alt="path">
                 </a>
             </div>
 
-            <!-- Shared With Me button -->
-            <div id="filepath-button" class="col-md-3 col-sm-4 col-5">
-                <button>Shared With Me</button>
-            </div>
-
-            <!-- Sharing With button -->
-            <div id="filepath-button" class="col-md-3 col-sm-4 col-5">
-                <button>Sharing With</button>
-            </div>
-
         </div>
-
-
-
-
-
-
-
-
-
 
 
         <!-- Shared With Me -->
