--- a/Ethereal Cloud/Pages/Shared.cshtml
+++ b/Ethereal Cloud/Pages/Shared.cshtml
@@ -74,19 +74,19 @@
                 <div class="row" id="scrollbox-contents">
                     @foreach (var display in Model.DisplayList)
                     {
-                        <div id="uploaded-files" class="file-hover" onmouseover="showButton('fileButtonHolder-@display.Id')" onmouseout="hideButton('fileButtonHolder-@display.Id', 'file-info-@display.Id')">
+                        <div id="uploaded-files" class="file-hover" onmouseover="showButton('fileButtonHolder-@display.Id-@display.Type')" onmouseout="hideButton('fileButtonHolder-@display.Id-@display.Type', 'file-info-@display.Id-@display.Type')">
                             <a id="fileLink">
                                 <img id="uploaded-files-img" src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
                             </a>
                             <p>@display.Name</p>
 
                             <!-- Buttons for files/folders-->
-                            <div id="fileButtonHolder-@display.Id" class="fileButtonHolder" style="">
+                            <div id="fileButtonHolder-@display.Id-@display.Type" class="fileButtonHolder" style="">
 
-                                <button id="fileSettingsButton" aria-expanded="false" aria-controls="file-info-@display.Id" onclick="toggleFileInfo('file-info-@display.Id')">
+                                <button id="fileSettingsButton" aria-expanded="false" aria-controls="file-info-@display.Id-@display.Type" onclick="toggleFileInfo('file-info-@display.Id-@display.Type')">
                                     <img id="fileSettingsImage" src="~/images/file-icons/three-dots.svg" alt="path">
 
-                                    <div id="file-info-@display.Id" class="file-info">
+                                    <div id="file-info-@display.Id-@display.Type" class="file-info">
                                         <div class="menu" id="@display.Id-menu">
                                             <div class="menu-item" onclick="restoreFileFolder('@display.Id', '@display.Type')">Restore</div>
                                         </div>
@@ -122,19 +122,19 @@
                 <div class="row" id="scrollbox-contents">
                     @foreach (var display in Model.DisplayList)
                     {
-                        <div id="uploaded-files" class="file-hover" onmouseover="showButton('fileButtonHolder-@display.Id')" onmouseout="hideButton('fileButtonHolder-@display.Id', 'file-info-@display.Id')">
+                        <div id="uploaded-files" class="file-hover" onmouseover="showButton('fileButtonHolder-@display.Id-@display.Type')" onmouseout="hideButton('fileButtonHolder-@display.Id-@display.Type', 'file-info-@display.Id-@display.Type')">
                             <a id="fileLink">
                                 <img id="uploaded-files-img" src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
                             </a>
                             <p>@display.Name</p>
 
                             <!-- Buttons for files/folders-->
-                            <div id="fileButtonHolder-@display.Id" class="fileButtonHolder" style="">
+                            <div id="fileButtonHolder-@display.Id-@display.Type" class="fileButtonHolder" style="">
 
-                                <button id="fileSettingsButton" aria-expanded="false" aria-controls="file-info-@display.Id" onclick="toggleFileInfo('file-info-@display.Id')">
+                                <button id="fileSettingsButton" aria-expanded="false" aria-controls="file-info-@display.Id-@display.Type" onclick="toggleFileInfo('file-info-@display.Id-@display.Type')">
                                     <img id="fileSettingsImage" src="~/images/file-icons/three-dots.svg" alt="path">
 
-                                    <div id="file-info-@display.Id" class="file-info">
+                                    <div id="file-info-@display.Id-@display.Type" class="file-info">
                                         <div class="menu" id="@display.Id-menu">
                                             <div class="menu-item" onclick="restoreFileFolder('@display.Id', '@display.Type')">Restore</div>
                                         </div>
